--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Spinner</title>
 </head>
 <body>
-    <h1 class="header-text">PRESS&nbsp;&nbsp;&nbsp;ANY&nbsp;&nbsp;&nbsp;KEY</h1>
+    <h1 class="header-text">PRESS&nbsp;&nbsp;&nbsp;ANY&nbsp;&nbsp;&nbsp;KEY&nbsp;/&nbsp;OR&nbsp;&nbsp;&nbsp;CLICK</h1>
     <div class="spinner-wrapper">
         <img src="css/spinner.png" alt="">
     </div>
